BACK UP 2019FEB18

--- a/public_html/deliverables.html
+++ b/public_html/deliverables.html
@@ -36,9 +36,15 @@
             <th>Deliverables - To be updated every Monday no later than 1:00pm</th>
            </tr>
            <tr>
-            <td><a href='Final-PRJ566.docx'>Updated Final Document</a> - 	Feb 10, 2019</td>
+            <td><a href='Final-PRJ566.docx'>Updated Final Document</a> - 	Feb 18, 2019</td>
            </tr>
-         </table> 	
+         </table>
+         <h2>MS Project Download Link</h2>
+         <table class='table-type-1'>
+           <tr>
+            <td><a href='group5_msproject.mpp'>Updated MS Project File</a> - 	Feb 18, 2019</td>
+           </tr>
+         </table>  	
     </div>
     <div id='footer'>
        <script>
