--- a/public_html/minutes/index.html
+++ b/public_html/minutes/index.html
@@ -59,8 +59,8 @@
           <td>&nbsp;</td>
         </tr>
         <tr>
-          <th>&nbsp;</th>
-          <td>&nbsp;</td>
+          <th>FEB-14-2019</th>
+          <td><a href="meetingMinutes_4.docx">meetingMinutes_4.docx</a></td>
           <td>&nbsp;</td>
         </tr>
       </table>
