--- a/public_html/progress/index.html
+++ b/public_html/progress/index.html
@@ -58,6 +58,11 @@
           <td><a href='mindspark_statusReport3.docx'>mindspark_statusReport3.docx</a></td>
           <td>&nbsp;</td>
         </tr>
+        <tr>
+          <th>FEB-18-2019</th>
+          <td><a href='mindspark_statusReport4.docx'>mindspark_statusReport4.docx</a></td>
+          <td>&nbsp;</td>
+        </tr>
       </table>
       <p>Must reflect an accurate progress of the group / project.<br />
         &nbsp; &nbsp; In point form, include a list of completed tasks by each member.<br />
