--- a/public_html/time/index.html
+++ b/public_html/time/index.html
@@ -53,7 +53,7 @@
             <th><a href="youngminko_timesheet.xlsx">Young Min Ko</a></th>
             <th><a href="GiaTuongTran_timesheet.xlsx">Gia Tuong Tran</a></th>
             <th><a href="PratikPanchani_timesheet.xlsx">Pratik Panchani</a></th>
-            <th><a href="ab_timesheet.xlsx">Arnav Bansal</a></th>
+            <th><a href="ArnavBansal_timesheet.xlsx">Arnav Bansal</a></th>
           </tr>
         </table>
 
