--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,8 +40,8 @@
             <th>Announcement</th>
         </tr>
         <tr>
-            <th>Jan ... 2019</th>
-            <th></th>
+            <th>MAR-07-2019</th>
+            <th><a href= "group5solution_Exercise-01.xlsx">group5solution_Exercise-01.xlsx</a></th>
         </tr>
        </table> 
      </div>
