--- a/public_html/minutes/index.html
+++ b/public_html/minutes/index.html
@@ -63,6 +63,16 @@
           <td><a href="meetingMinutes_4.docx">meetingMinutes_4.docx</a></td>
           <td>&nbsp;</td>
         </tr>
+        <tr>
+          <th>FEB-21-2019</th>
+          <td><a href="meetingMinutes_5.docx">meetingMinutes_5.docx</a></td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <th>MAR-07-2019</th>
+          <td><a href="meetingMinutes_6.docx">meetingMinutes_6.docx</a></td>
+          <td>&nbsp;</td>
+        </tr>
       </table>
     </div>
     <div id='footer'>
