--- a/public_html/progress/index.html
+++ b/public_html/progress/index.html
@@ -63,6 +63,16 @@
           <td><a href='mindspark_statusReport4.docx'>mindspark_statusReport4.docx</a></td>
           <td>&nbsp;</td>
         </tr>
+        <tr>
+          <th>MAR-04-2019</th>
+          <td><a href='mindspark_statusReport5.docx'>mindspark_statusReport5.docx</a></td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <th>MAR-10-2019</th>
+          <td><a href='mindspark_statusReport6.docx'>mindspark_statusReport6.docx</a></td>
+          <td>&nbsp;</td>
+        </tr>
       </table>
       <p>Must reflect an accurate progress of the group / project.<br />
         &nbsp; &nbsp; In point form, include a list of completed tasks by each member.<br />
