--- a/public_html/minutes/index.html
+++ b/public_html/minutes/index.html
@@ -73,6 +73,11 @@
           <td><a href="meetingMinutes_6.docx">meetingMinutes_6.docx</a></td>
           <td>&nbsp;</td>
         </tr>
+        <tr>
+          <th>MAR-14-2019</th>
+          <td><a href="meetingMinutes_7.docx">meetingMinutes_7.docx</a></td>
+          <td>&nbsp;</td>
+        </tr>
       </table>
     </div>
     <div id='footer'>
