--- a/public_html/progress/index.html
+++ b/public_html/progress/index.html
@@ -73,6 +73,11 @@
           <td><a href='mindspark_statusReport6.docx'>mindspark_statusReport6.docx</a></td>
           <td>&nbsp;</td>
         </tr>
+        <tr>
+          <th>MAR-17-2019</th>
+          <td><a href='mindspark_statusReport7.docx'>mindspark_statusReport7.docx</a></td>
+          <td>&nbsp;</td>
+        </tr>
       </table>
       <p>Must reflect an accurate progress of the group / project.<br />
         &nbsp; &nbsp; In point form, include a list of completed tasks by each member.<br />
