before doing g final thing

--- a/public_html/minutes/index.html
+++ b/public_html/minutes/index.html
@@ -78,6 +78,16 @@
           <td><a href="meetingMinutes_7.docx">meetingMinutes_7.docx</a></td>
           <td>&nbsp;</td>
         </tr>
+        <tr>
+          <th>MAR-21-2019</th>
+          <td><a href="meetingMinutes_8.docx">meetingMinutes_8.docx</a></td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <th>MAR-28-2019</th>
+          <td><a href="meetingMinutes_9.docx">meetingMinutes_9.docx</a></td>
+          <td>&nbsp;</td>
+        </tr>
       </table>
     </div>
     <div id='footer'>
