--- a/public_html/progress/index.html
+++ b/public_html/progress/index.html
@@ -78,6 +78,16 @@
           <td><a href='mindspark_statusReport7.docx'>mindspark_statusReport7.docx</a></td>
           <td>&nbsp;</td>
         </tr>
+        <tr>
+          <th>MAR-24-2019</th>
+          <td><a href='mindspark_statusReport8.docx'>mindspark_statusReport8.docx</a></td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <th>MAR-31-2019</th>
+          <td><a href='mindspark_statusReport9.docx'>mindspark_statusReport9.docx</a></td>
+          <td>&nbsp;</td>
+        </tr>
       </table>
       <p>Must reflect an accurate progress of the group / project.<br />
         &nbsp; &nbsp; In point form, include a list of completed tasks by each member.<br />
