just organizing folders

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,16 +40,16 @@
             <th>Announcement</th>
         </tr>
         <tr>
-          <td></td>
-          <td><a href=''>Group 5 - Final Design Document</a></td>
+          <td>APR-07-2019</td>
+          <td><a href='Final-PRJ566.docx'>Group 5 - Final Design Document</a></td>
          </tr>
          <tr>
           <td></td>
           <td><a href=''>Group 5 - Final Presentation</a></td>
          </tr>
          <tr>
-          <td></td>
-          <td><a href=''>Group 5 - Implementation Schedule for PRJ666</a></td>
+          <td>APR-07-2019</td>
+          <td><a href='group5_scheduleForPRJ666.mpp'>Group 5 - Implementation Schedule for PRJ666</a></td>
          </tr>
        </table> 
      </div>
